syntax = "proto3";

package pb;

service Subscription {
    rpc Create (CreateRequest) returns (CreateResponse) {}
}

message CreateRequest {
    int32 bill_id =1;
    int32 pledge_id=2;
    int32 user_id=3;
    int32 campaign_id=4;
    int32 amount_cents=5;
    string status=6;

}

message CreateResponse {
    int32 id=1;
}